# elias-memory

./: .gitignore  README.md  pyproject.toml
backups/: knowledge-graph.json  manifest.json
backups/memory-files/: MEMORY.md  Z6-self-improving-pipeline.md  aliases.md  app-manager.md  details.md  eriks-anweisungen-2026-03-06.md  infrastructure.md  skills.md
docs/plans/: 2026-03-05-implementation-plan.md  2026-03-05-memory-framework-design.md
scripts/: convert_gguf.py  generate_traces.py  prepare_dataset.py  train_sft.py  upload_dataset.py
src/elias_memory/: __init__.py  consolidation.py  core.py  decay.py  export.py  gaps.py  graph.py  guard.py  retrieval.py  types.py
src/elias_memory/embeddings/: __init__.py  base.py  fallback.py  nvidia.py
src/elias_memory/store/: __init__.py  db.py  schema.sql  vec.py
tests/: conftest.py  test_consolidation.py  test_core.py  test_decay.py  test_embeddings.py  test_export.py  test_gaps.py  test_graph.py  test_guard.py  test_namespaces.py  test_nvidia_embedder.py  test_retrieval.py  test_store.py  test_types.py  test_vec.py
