[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "elias-memory"
version = "0.1.0"
description = "Persistent memory framework for AI agents"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "httpx>=0.24",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1"]
full = ["sqlite-vec>=0.1", "rank-bm25>=0.2"]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
