[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elias-memory"
version = "0.2.0"
description = "Persistent memory framework for AI agents — Desktop/Mobile 2-tier architecture"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "httpx>=0.24",
]

[project.optional-dependencies]
vec = ["sqlite-vec>=0.1"]
desktop = ["faiss-cpu>=1.7", "sqlite-vec>=0.1"]
full = ["faiss-cpu>=1.7", "sqlite-vec>=0.1", "rank-bm25>=0.2"]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
